force standard to be c++14

--- a/kimera_semantics/CMakeLists.txt
+++ b/kimera_semantics/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(kimera_semantics)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 find_package(catkin_simple REQUIRED)
 
 catkin_simple()
